--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,8 @@
 .settings
 target
 test
+run
 *.log
 .bin/external/pkg
-notas.txt
-*.xlsx
-/scanfile_02.txt
-/scanfile_01.txt
-application.pro*
-/application.properties
+
+
